--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<a href="amazon.html"></a>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<a href="amazon.html">amazon</a>
+<a href="code.css">code</a>
+<a href="scripts.js">scripts</a>
+</body>
+</html>
